--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navContainer">
             
-                <img src="logos.png" alt="Safe-Drive Logo">
+                <img class="im" src="logos.png" alt="Safe-Drive Logo">
             
         </nav>
     </header>
