--- a/index.html
+++ b/index.html
@@ -11,26 +11,22 @@
     <!-- Navigation Bar -->
     <header>
         <nav class="navContainer">
-            
-                <img class="im" src="logos.png" alt="Safe-Drive Logo">
-            
+            <img class="im" src="logos.png" alt="Safe-Drive Logo">
         </nav>
     </header>
 
     <!-- Speed, Road, and Alerts Container -->
     <section class="info-container">
         <div class="speed-road-container">
-            <div class="info-card">
+            <div class="info-card" id="speed-container">
                 <h3>Speed</h3>
                 <p id="speed">0 km/h</p>
             </div>
-            <div class="info-card">
+            <div class="info-card" id="road-container">
                 <h3>Road</h3>
                 <p id="road">Unknown</p>
             </div>
-        </div>
-        <div class="alert-container">
-            <div class="info-card alert-card">
+            <div class="info-card alert-card" id="alert-container">
                 <h3>Alert</h3>
                 <p id="alert">None</p>
             </div>
