--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="info-card" id="speed-container">
                 <h3>Speed</h3>
                 <p id="speed">0 km/h</p>
-            </div>
+            </div><br>
             <div class="info-card" id="road-container">
                 <h3>Road</h3>
                 <p id="road">Unknown</p>
-            </div>
+            </div><br>
             <div class="info-card alert-card" id="alert-container">
                 <h3>Alert</h3>
                 <p id="alert">None</p>
             </div>
-        </div>
+        </div><br>
     </section>
 
     <!-- Road Safety Instructions -->
