--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </header>
 
     <!-- Speed, Road, and Alerts Container -->
+<!-- Start Driving Button -->
+<button id="start-driving-btn">Start Driving</button>
     <section class="info-container">
         <div class="speed-road-container">
             <div class="info-card" id="speed-container">
