--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
         </div><br>
     </section>
+<a id="sosButton" href="#">SOS</a>
 
     <!-- Road Safety Instructions -->
     <section class="safety-instructions">
