--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div><br>
     </section>
-<a id="sosButton" href="#">SOS</a>
+<a id="sosButton" href="#">Call Emergency Number</a>
     <br>
     <br>
 
