--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Road Safety Instructions -->
     <section class="safety-instructions">
-        <h2>Road Safety Instructions</h2>
+        <h2>Road Safety Tips</h2>
         <div class="safety-images">
             <div class="safety-item">
                 <img src="seatbelt.png" alt="Wear Seatbelt">
